--- a/package.json
+++ b/package.json
@@ -14,17 +14,23 @@
 		"typecheck": "tsc"
 	},
 	"dependencies": {
+		"@diffusionstudio/vits-web": "^1.0.3",
+		"@headlessui/react": "^2.2.8",
+		"@heroicons/react": "^2.2.0",
+		"@huggingface/transformers": "^3.7.3",
 		"@t3-oss/env-core": "^0.13.8",
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.1.13",
-		"@tanstack/react-devtools": "^0.6.7",
+		"@tanstack/react-devtools": "^0.6.8",
 		"@tanstack/react-router": "^1.131.44",
 		"@tanstack/react-router-devtools": "^1.131.44",
 		"@tanstack/react-router-ssr-query": "^1.131.44",
 		"@tanstack/react-start": "^1.131.44",
 		"@tanstack/router-plugin": "^1.131.44",
+		"class-variance-authority": "^0.7.1",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
+		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^3.1.1",
 		"tailwindcss": "^4.1.13",
 		"tailwindcss-animate": "^1.0.7",
@@ -39,9 +45,9 @@
 		"@types/node": "^24.5.1",
 		"@types/react": "^19.1.13",
 		"@types/react-dom": "^19.1.9",
-		"@vitejs/plugin-react": "^5.0.2",
+		"@vitejs/plugin-react": "^5.0.3",
 		"jsdom": "^27.0.0",
-		"lefthook": "^1.12.3",
+		"lefthook": "^1.13.1",
 		"typescript": "^5.9.2",
 		"vite": "^7.1.5",
 		"vitest": "^3.2.4",
