--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@tanstack/react-start": "^1.131.44",
 		"@tanstack/router-plugin": "^1.131.44",
 		"class-variance-authority": "^0.7.1",
+		"lucide-react": "^0.544.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
 		"tailwind-merge": "^3.3.1",
