chore(vscode): hide project meta folders and update ignores
Update file exclusions in VS Code and Biome to hide project meta folders
like node_modules, build output and lock files for cleaner workspace.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,11 @@
 {
+	"files.exclude": {
+		"node_modules": true,
+		"bun.lock": true,
+		".nitro": true,
+		".output": true,
+		".tanstack": true
+	},
 	"files.watcherExclude": {
 		"**/routeTree.gen.ts": true
 	},
