--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,13 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["**", "!**/.tanstack", "!src/routeTree.gen.ts"]
+		"includes": [
+			"**",
+			"!**/.tanstack",
+			"!src/routeTree.gen.ts",
+			"!**/.output",
+			"!**/.nitro"
+		]
 	},
 	"overrides": [
 		{
