--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^3.1.1",
 		"tailwindcss": "^4.1.13",
-		"tailwindcss-animate": "^1.0.7",
 		"vite-tsconfig-paths": "^5.1.4",
 		"zod": "^4.1.11"
 	},
@@ -49,6 +48,7 @@
 		"@vitejs/plugin-react": "^5.0.4",
 		"jsdom": "^27.0.0",
 		"lefthook": "^1.13.4",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.2",
 		"vite": "^7.1.7",
 		"vitest": "^3.2.4",
