--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.2.5/schema.json",
 	"vcs": {
 		"enabled": false,
 		"clientKind": "git",
@@ -12,7 +12,8 @@
 			"!**/.tanstack",
 			"!src/routeTree.gen.ts",
 			"!**/.output",
-			"!**/.nitro"
+			"!**/.nitro",
+			"!dist"
 		]
 	},
 	"overrides": [
