--- a/package.json
+++ b/package.json
@@ -14,42 +14,41 @@
 		"typecheck": "tsc"
 	},
 	"dependencies": {
+		"@base-ui-components/react": "^1.0.0-beta.4",
 		"@diffusionstudio/vits-web": "^1.0.3",
-		"@headlessui/react": "^2.2.9",
-		"@heroicons/react": "^2.2.0",
-		"@huggingface/transformers": "^3.7.3",
+		"@huggingface/transformers": "^3.7.5",
 		"@t3-oss/env-core": "^0.13.8",
 		"@tailwindcss/typography": "^0.5.19",
-		"@tailwindcss/vite": "^4.1.13",
-		"@tanstack/react-devtools": "^0.7.0",
-		"@tanstack/react-router": "^1.132.17",
-		"@tanstack/react-router-devtools": "^1.132.17",
-		"@tanstack/react-router-ssr-query": "^1.132.17",
-		"@tanstack/react-start": "^1.132.18",
-		"@tanstack/router-plugin": "^1.132.17",
+		"@tailwindcss/vite": "^4.1.14",
+		"@tanstack/react-devtools": "^0.7.1",
+		"@tanstack/react-router": "^1.132.31",
+		"@tanstack/react-router-devtools": "^1.132.31",
+		"@tanstack/react-router-ssr-query": "^1.132.31",
+		"@tanstack/react-start": "^1.132.32",
+		"@tanstack/router-plugin": "^1.132.31",
 		"class-variance-authority": "^0.7.1",
 		"lucide-react": "^0.544.0",
-		"react": "^19.1.1",
-		"react-dom": "^19.1.1",
+		"react": "^19.2.0",
+		"react-dom": "^19.2.0",
 		"tailwind-merge": "^3.3.1",
-		"tailwindcss": "^4.1.13",
+		"tailwindcss": "^4.1.14",
 		"vite-tsconfig-paths": "^5.1.4",
 		"zod": "^4.1.11"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.2.4",
+		"@biomejs/biome": "^2.2.5",
 		"@testing-library/dom": "^10.4.1",
 		"@testing-library/react": "^16.3.0",
 		"@total-typescript/ts-reset": "^0.6.1",
-		"@types/node": "^24.5.2",
-		"@types/react": "^19.1.14",
-		"@types/react-dom": "^19.1.9",
+		"@types/node": "^24.6.2",
+		"@types/react": "^19.2.0",
+		"@types/react-dom": "^19.2.0",
 		"@vitejs/plugin-react": "^5.0.4",
 		"jsdom": "^27.0.0",
-		"lefthook": "^1.13.4",
+		"lefthook": "^1.13.6",
 		"tw-animate-css": "^1.4.0",
-		"typescript": "^5.9.2",
-		"vite": "^7.1.7",
+		"typescript": "^5.9.3",
+		"vite": "^7.1.9",
 		"vitest": "^3.2.4",
 		"web-vitals": "^5.1.0"
 	}
