feat(chat): add AI conversation route using WebLLM
Adds new /chat route with AI-powered Vietnamese conversation practice:
- WebLLM integration for running language models in browser
- Chat UI with real-time message streaming and thinking states
- Model selection in settings drawer
- Web worker for non-blocking model execution
- Persistent worker across React mounts

Web GPU-based LLM implementation optimized for low resource usage.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@base-ui-components/react": "^1.0.0-beta.4",
 		"@diffusionstudio/vits-web": "^1.0.3",
 		"@huggingface/transformers": "^3.7.5",
+		"@mlc-ai/web-llm": "^0.2.79",
 		"@t3-oss/env-core": "^0.13.8",
 		"@tanstack/react-devtools": "^0.7.2",
 		"@tanstack/react-router": "^1.132.37",
@@ -38,10 +39,12 @@
 		"@testing-library/dom": "^10.4.1",
 		"@testing-library/react": "^16.3.0",
 		"@total-typescript/ts-reset": "^0.6.1",
+		"@types/dom-speech-recognition": "^0.0.7",
 		"@types/node": "^24.6.2",
 		"@types/react": "^19.2.0",
 		"@types/react-dom": "^19.2.0",
 		"@vitejs/plugin-react": "^5.0.4",
+		"@webgpu/types": "^0.1.66",
 		"jsdom": "^27.0.0",
 		"lefthook": "^1.13.6",
 		"tailwindcss": "^4.1.14",
