--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 		"jsx": "react-jsx",
 		"module": "ESNext",
 		"lib": ["ES2022", "DOM", "DOM.Iterable"],
-		"types": ["vite/client", "node"],
+		"types": ["vite/client", "node", "@webgpu/types", "dom-speech-recognition"],
 
 		/* Bundler mode */
 		"moduleResolution": "bundler",
