--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.2.5/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.3.4/schema.json",
 	"vcs": {
 		"enabled": false,
 		"clientKind": "git",
@@ -40,7 +40,8 @@
 			"nursery": {
 				"useSortedClasses": {
 					"options": {
-						"functions": ["tv", "twMerge", "clsx", "cn"]
+						"attributes": ["classList"],
+						"functions": ["tv", "twMerge", "clsx", "cn", "cva", "tw"]
 					},
 					"level": "info",
 					"fix": "unsafe"
@@ -51,6 +52,14 @@
 	"javascript": {
 		"formatter": {
 			"quoteStyle": "double"
+		}
+	},
+	"css": {
+		"formatter": {
+			"enabled": true
+		},
+		"parser": {
+			"tailwindDirectives": true
 		}
 	}
 }
