--- a/package.json
+++ b/package.json
@@ -15,44 +15,45 @@
 	},
 	"dependencies": {
 		"@base-ui-components/react": "^1.0.0-beta.4",
-		"@huggingface/transformers": "^3.7.5",
+		"@huggingface/transformers": "^3.7.6",
 		"@mlc-ai/web-llm": "^0.2.79",
 		"@t3-oss/env-core": "^0.13.8",
-		"@tanstack/react-devtools": "^0.7.2",
-		"@tanstack/react-router": "^1.132.37",
-		"@tanstack/react-router-devtools": "^1.132.37",
-		"@tanstack/react-router-ssr-query": "^1.132.37",
-		"@tanstack/react-start": "^1.132.38",
+		"@tanstack/react-devtools": "^0.8.0",
+		"@tanstack/react-router": "^1.134.12",
+		"@tanstack/react-router-devtools": "^1.134.12",
+		"@tanstack/react-router-ssr-query": "^1.134.12",
+		"@tanstack/react-start": "^1.134.12",
 		"class-variance-authority": "^0.7.1",
-		"lucide-react": "^0.544.0",
-		"onnxruntime-web": "^1.18.0",
+		"lucide-react": "^0.552.0",
+		"onnxruntime-web": "^1.23.2",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"tailwind-merge": "^3.3.1",
-		"zod": "^4.1.11"
+		"zod": "^4.1.12"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.2.5",
+		"babel-plugin-react-compiler": "^1.0.0",
+		"@biomejs/biome": "^2.3.4",
 		"@tailwindcss/typography": "^0.5.19",
-		"@tailwindcss/vite": "^4.1.14",
-		"@tanstack/router-plugin": "^1.132.37",
+		"@tailwindcss/vite": "^4.1.16",
+		"@tanstack/router-plugin": "^1.134.12",
 		"@testing-library/dom": "^10.4.1",
 		"@testing-library/react": "^16.3.0",
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/dom-speech-recognition": "^0.0.7",
-		"@types/node": "^24.6.2",
-		"@types/react": "^19.2.0",
-		"@types/react-dom": "^19.2.0",
-		"@vitejs/plugin-react": "^5.0.4",
+		"@types/node": "^24.10.0",
+		"@types/react": "^19.2.2",
+		"@types/react-dom": "^19.2.2",
+		"@vitejs/plugin-react": "^5.1.0",
 		"@webgpu/types": "^0.1.66",
-		"jsdom": "^27.0.0",
+		"jsdom": "^27.1.0",
 		"lefthook": "^1.13.6",
-		"tailwindcss": "^4.1.14",
+		"tailwindcss": "^4.1.16",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3",
-		"vite": "^7.1.9",
+		"vite": "^7.2.0",
 		"vite-tsconfig-paths": "^5.1.4",
-		"vitest": "^3.2.4",
+		"vitest": "^4.0.7",
 		"web-vitals": "^5.1.0"
 	}
 }
