fix: grammar stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,28 +15,12 @@
 	"files.readonlyInclude": {
 		"**/routeTree.gen.ts": true
 	},
-	"[javascript]": {
-		"editor.defaultFormatter": "biomejs.biome"
-	},
-	"[javascriptreact]": {
-		"editor.defaultFormatter": "biomejs.biome"
-	},
-	"[typescript]": {
-		"editor.defaultFormatter": "biomejs.biome"
-	},
-	"[typescriptreact]": {
-		"editor.defaultFormatter": "biomejs.biome"
-	},
-	"[json]": {
-		"editor.defaultFormatter": "biomejs.biome"
-	},
-	"[jsonc]": {
-		"editor.defaultFormatter": "biomejs.biome"
-	},
-	"[css]": {
-		"editor.defaultFormatter": "biomejs.biome"
-	},
+	"tailwindCSS.classFunctions": ["cva", "cx", "twMerge", "clsx", "cn"],
 	"editor.formatOnSave": true,
+	"editor.defaultFormatter": "biomejs.biome",
+	"[markdown]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
 	"editor.codeActionsOnSave": {
 		"source.fixAll.biome": "explicit",
 		"source.organizeImports.biome": "explicit"
