--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -4,12 +4,37 @@
 		"source.fixAll.biome": true,
 		"source.organizeImports.biome": true
 	},
+	"lsp": {
+		"tailwindcss-language-server": {
+			"settings": {
+				"classFunctions": ["cva", "cx", "twMerge", "clsx", "cn"]
+			}
+		}
+	},
 	"languages": {
-		"JavaScript": { "formatter": { "language_server": { "name": "biome" } } },
-		"TypeScript": { "formatter": { "language_server": { "name": "biome" } } },
-		"TSX": { "formatter": { "language_server": { "name": "biome" } } },
-		"JSON": { "formatter": { "language_server": { "name": "biome" } } },
-		"JSONC": { "formatter": { "language_server": { "name": "biome" } } },
-		"CSS": { "formatter": { "language_server": { "name": "biome" } } }
+		"JavaScript": {
+			"language_servers": ["biome", "vtsls"],
+			"formatter": { "language_server": { "name": "biome" } }
+		},
+		"TypeScript": {
+			"language_servers": ["biome", "vtsls"],
+			"formatter": { "language_server": { "name": "biome" } }
+		},
+		"TSX": {
+			"language_servers": ["biome", "vtsls", "tailwindcss-language-server"],
+			"formatter": { "language_server": { "name": "biome" } }
+		},
+		"JSON": {
+			"language_servers": ["biome", "json-language-server"],
+			"formatter": { "language_server": { "name": "biome" } }
+		},
+		"JSONC": {
+			"language_servers": ["biome", "json-language-server"],
+			"formatter": { "language_server": { "name": "biome" } }
+		},
+		"CSS": {
+			"language_servers": ["biome", "tailwindcss-intellisense-css"],
+			"formatter": { "language_server": { "name": "biome" } }
+		}
 	}
 }
