--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@vitejs/plugin-react": "^5.1.0",
 		"@webgpu/types": "^0.1.66",
 		"babel-plugin-react-compiler": "^1.0.0",
+		"baseline-browser-mapping": "^2.9.18",
 		"jsdom": "^27.1.0",
 		"lefthook": "^1.13.6",
 		"tailwindcss": "^4.1.16",
