--- a/package.json
+++ b/package.json
@@ -14,48 +14,48 @@
 		"typecheck": "tsc"
 	},
 	"dependencies": {
-		"@base-ui-components/react": "^1.0.0-beta.4",
+		"@base-ui/react": "^1.1.0",
 		"@diffusionstudio/vits-web": "^1.0.3",
-		"@huggingface/transformers": "^3.7.6",
-		"@mlc-ai/web-llm": "^0.2.79",
-		"@t3-oss/env-core": "^0.13.8",
-		"@tanstack/react-devtools": "^0.8.0",
-		"@tanstack/react-router": "^1.134.12",
-		"@tanstack/react-router-devtools": "^1.134.12",
-		"@tanstack/react-router-ssr-query": "^1.134.12",
-		"@tanstack/react-start": "^1.134.12",
+		"@huggingface/transformers": "^3.8.1",
+		"@mlc-ai/web-llm": "^0.2.80",
+		"@t3-oss/env-core": "^0.13.10",
+		"@tanstack/react-devtools": "^0.9.2",
+		"@tanstack/react-router": "^1.157.16",
+		"@tanstack/react-router-devtools": "^1.157.16",
+		"@tanstack/react-router-ssr-query": "^1.157.16",
+		"@tanstack/react-start": "^1.157.16",
 		"class-variance-authority": "^0.7.1",
-		"lucide-react": "^0.552.0",
+		"lucide-react": "^0.563.0",
 		"onnxruntime-web": "^1.23.2",
-		"react": "^19.2.0",
-		"react-dom": "^19.2.0",
-		"tailwind-merge": "^3.3.1",
-		"zod": "^4.1.12"
+		"react": "^19.2.4",
+		"react-dom": "^19.2.4",
+		"tailwind-merge": "^3.4.0",
+		"zod": "^4.3.6"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.3.4",
+		"@biomejs/biome": "^2.3.13",
 		"@tailwindcss/typography": "^0.5.19",
-		"@tailwindcss/vite": "^4.1.16",
-		"@tanstack/router-plugin": "^1.134.12",
+		"@tailwindcss/vite": "^4.1.18",
+		"@tanstack/router-plugin": "^1.157.16",
 		"@testing-library/dom": "^10.4.1",
-		"@testing-library/react": "^16.3.0",
+		"@testing-library/react": "^16.3.2",
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/dom-speech-recognition": "^0.0.7",
-		"@types/node": "^24.10.0",
-		"@types/react": "^19.2.2",
-		"@types/react-dom": "^19.2.2",
-		"@vitejs/plugin-react": "^5.1.0",
-		"@webgpu/types": "^0.1.66",
+		"@types/node": "^25.0.10",
+		"@types/react": "^19.2.9",
+		"@types/react-dom": "^19.2.3",
+		"@vitejs/plugin-react": "^5.1.2",
+		"@webgpu/types": "^0.1.69",
 		"babel-plugin-react-compiler": "^1.0.0",
 		"baseline-browser-mapping": "^2.9.18",
-		"jsdom": "^27.1.0",
-		"lefthook": "^1.13.6",
-		"tailwindcss": "^4.1.16",
+		"jsdom": "^27.4.0",
+		"lefthook": "^2.0.15",
+		"tailwindcss": "^4.1.18",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3",
-		"vite": "^7.2.0",
-		"vite-tsconfig-paths": "^5.1.4",
-		"vitest": "^4.0.7",
+		"vite": "^7.3.1",
+		"vite-tsconfig-paths": "^6.0.5",
+		"vitest": "^4.0.18",
 		"web-vitals": "^5.1.0"
 	}
 }
