--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"baseline-browser-mapping": "^2.9.18",
 		"jsdom": "^27.4.0",
 		"lefthook": "^2.0.15",
+		"nitro": "npm:nitro-nightly@latest",
 		"tailwindcss": "^4.1.18",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3",
