--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@biomejs/biome": "^2.3.14",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.18",
+		"@tanstack/devtools-vite": "^0.5.1",
 		"@tanstack/router-plugin": "^1.159.5",
 		"@testing-library/dom": "^10.4.1",
 		"@testing-library/react": "^16.3.2",
