--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@tanstack/react-router-ssr-query": "^1.159.5",
 		"@tanstack/react-start": "^1.159.5",
 		"class-variance-authority": "^0.7.1",
+		"input-otp": "^1.4.2",
 		"lucide-react": "^0.563.0",
 		"onnxruntime-web": "^1.24.1",
 		"react": "^19.2.4",
