--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@diffusionstudio/vits-web": "^1.0.3",
 		"@huggingface/transformers": "^3.8.1",
 		"@mlc-ai/web-llm": "^0.2.80",
+		"@netlify/vite-plugin-tanstack-start": "^1.2.9",
 		"@t3-oss/env-core": "^0.13.10",
 		"@tanstack/react-devtools": "^0.9.5",
 		"@tanstack/react-router": "^1.159.5",
@@ -52,7 +53,6 @@
 		"baseline-browser-mapping": "^2.9.19",
 		"jsdom": "^28.0.0",
 		"lefthook": "^2.1.0",
-		"nitro": "npm:nitro-nightly@latest",
 		"tailwindcss": "^4.1.18",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3",
