--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"baseline-browser-mapping": "^2.9.19",
 		"jsdom": "^28.0.0",
 		"lefthook": "^2.1.0",
+		"nitro": "npm:nitro-nightly@latest",
 		"tailwindcss": "^4.1.18",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3",
